[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/ocean.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/bg wip.png" type="Texture" id=2]
[ext_resource path="res://scripts/rules.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="gameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 301.468, 399.842 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 176.0
margin_top = 315.0
margin_right = 423.0
margin_bottom = 485.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 247.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over!!!!
Racism is bad."
align = 1

[node name="playAgain" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 247.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "Play Again"

[node name="final_score_label" type="Label" parent="."]
anchor_top = 0.312
anchor_bottom = 0.312
margin_top = 0.399994
margin_right = 600.0
margin_bottom = 51.4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ready" from="." to="." method="_on_gameOver_ready"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/playAgain" to="." method="_on_playAgain_pressed"]
