[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/ocean.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/bg wip.png" type="Texture" id=2]
[ext_resource path="res://scripts/rules.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="rules" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 301.468, 399.842 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 77.0
margin_top = 207.0
margin_right = 522.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 445.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rules:
Press space to shoot
Use arrow keys to move

Goal: Kill the octopi, 
you are the superior race "
align = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 445.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
